--- a/src/app/HiringManagement/offerletter-exe/offerletter-exe.component.html
+++ b/src/app/HiringManagement/offerletter-exe/offerletter-exe.component.html
@@ -61,7 +61,7 @@
                                         <div class="col-lg-12 col-md-12">
                                                 <div class="p-2">
                                                     <h6 class="fs-14 lh-base font-type fw-semibold mb-1 text-black">To,</h6>
-                                                    <h6 class="fs-14 lh-base font-type fw-semibold text-italic mb-1 text-black"><span>{{offerletterdt[0].GENDER === 'Female' ? 'Ms.' : 'Mr.' }} </span>{{this.offerletterdt[0].CANDIDATE_NAME}}</h6>
+                                                    <h6 class="fs-14 lh-base font-type fw-semibold text-italic mb-1 text-black"><span>{{offerletterdt[0].GENDER === 2 ? 'Ms.' : 'Mr.' }} </span>{{this.offerletterdt[0].CANDIDATE_NAME}}</h6>
                                                 </div>
                                                 <div class="table-responsive margin-up-10">
                                                     <table class="table table-borderless">
