--- a/src/app/attendance/attendancedata/attendancedata.component.html
+++ b/src/app/attendance/attendancedata/attendancedata.component.html
@@ -156,6 +156,11 @@
                                                                 <button type="button" class="btn btn-outline-warning btn-sm br_radius mr-2" data-bs-toggle="modal" data-bs-target="#EditModal" id="buttonEdit" (click)="selecteditem(item)" ><i class="fa fa-pencil-square-o ic_color" aria-hidden="true" style="font-size: 18px;"></i></button>
                                                                 
                                                                 </li>
+                                                                <!-- <li class="list-inline-item" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-placement="top" title="Mark as Weekoff" *ngIf="this.grpname.includes('HR')">
+                                                                
+                                                                    <button type="button" class="btn btn-outline-danger btn-sm br_radius mr-2" data-bs-toggle="modal"  id="buttonMarkWeekoff" (click)="MarkWeekoff(item)" ><i class="fa fa-calendar" aria-hidden="true" style="font-size: 18px;" ></i></button>
+                                                                    
+                                                                    </li> -->
                                                                 
                                                                 </ul>
                                                                
