--- a/src/app/leave/airticket-booking/airticket-booking.component.html
+++ b/src/app/leave/airticket-booking/airticket-booking.component.html
@@ -152,7 +152,7 @@
                                         <th>{{AirticketList.EMP_CODE}}</th>
                                         <td>{{AirticketList.EMP_NAME}}</td>
                                         <td>{{AirticketList.COMPANY}}</td>
-                                        <td>{{AirticketList.DEPT}}</td>
+                                        <!-- <td>{{AirticketList.DEPT}}</td> -->  
                                         <td>{{AirticketList.TYPE}}</td>
                                         <td>{{AirticketList.STATUS_VAL}}</td>
                                         <td>{{AirticketList.START_DATE | date:"dd-MM-yyyy"}}</td>
