--- a/src/app/PerformanceManagement/performance-management/performance-management.component.html
+++ b/src/app/PerformanceManagement/performance-management/performance-management.component.html
@@ -33,7 +33,7 @@
                                                         <div class="flex-grow-1 ms-2 ma-5">
                                                             <h2 class="fs-16 mb-1 font-type fw-semibold text-uppercase">Performance Management</h2>
                                                         </div>
-                                                        <div class="flex-shrink-0 ms-1 pr-20">
+                                                        <div class="flex-shrink-0 ms-1 pr-20" *ngIf="this.grpname.includes('LM')">
                                                             <div class="page-title-right padding-up-5">
                                                                 <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
                                                                     <input type="radio" class="btn-check" id="btnradio1" checked="true" name="user" [(ngModel)]="user" value="personal" (change)="SelectTeamorpersonal(user)">
@@ -112,7 +112,7 @@
                                                                             <a *ngIf="item.REQUEST_STATUS == 10" class="btn btn-success btn-sm ms-1 fs-12" [routerLink]="['/appraisal_form']" [queryParams]="{ empcode:item.EMP_CODE,reqId:item.REQUEST_ID,view:1 }">Appraisal Form</a>
                                                                         </h6>
                                                                     </div>
-                                                                    <div class="col-lg-12">
+                                                                    <div class="col-lg-12" *ngIf="item.REVIEWER_SCORE">
                                                                         <h6 class="fs-12 font-type" style="margin-top:-2px">Rating<span class="ms-1">:</span><i class="ri-star-fill text-warning me-1 ms-1"></i><span class="fs-12 font-type fw-semibold">{{item.REVIEWER_SCORE}}</span></h6>
                                                                     </div>
                                                                 </div>
@@ -250,7 +250,8 @@
                                                    </div>
                                                    <div>
                                                     <select class="form-select font-type fs-12 textbox-15 h-30" name="teamstatus" [(ngModel)]="teamstatus" (change)="Fetch_EmpGoalRequestsLM()">
-                                                        <option value="-1">All Status</option>
+                                                        <option value="-2" disabled selected>Status</option>
+                                                        <option value="-1">All</option>
                                                         <option *ngFor="let combo of statusdata" value="{{combo.KEY_ID}}" [selected]="combo.KEY_ID == 0">{{combo.DATA_VALUE}}</option>                                                            
                                                     </select>
                                                    </div>
@@ -285,7 +286,7 @@
                                                 <td style="white-space: pre-wrap;">{{dataLM.EMP_NAME}}</td>
                                                 <td>{{dataLM. TARGET_DATE | date:'dd-MM-yyyy'}}</td>
                                                 <td class="status">
-                                                    <span [ngClass]="getStatusClass(dataLM.REQUEST_STATUS)" class="badge  width-budge fs-11 fw-semibold text-uppercase">{{dataLM.STATUS_VAL}}</span>
+                                                    <a href="#statusModal" data-bs-toggle="modal"(click)="viewStatusModel(dataLM)"><span [ngClass]="getStatusClass(dataLM.REQUEST_STATUS)" class="badge  width-budge fs-11 fw-semibold text-uppercase">{{dataLM.STATUS_VAL}}</span></a>
                                                 </td>
                                                 <td>
                                                     <ul class="list-inline hstack gap-1 mb-0">
@@ -370,6 +371,46 @@
             <!-- End Page-content -->
 
             <!--MODAL BOXES-->
+
+
+                    <!-- Status Modal-->
+                    <div class="modal fade zoomIn" id="statusModal" tabindex="-1" data-bs-backdrop='static' aria-labelledby="statusModal" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-bottom" style="float:right">
+                            <div class="modal-content">
+                                <div class="modal-header bg-orange padding-up-5">
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal"(click)="clearHighlight()"></button>
+                                </div>
+                                <div class="modal-body ma-5">
+                                    <div class="mb-1">
+                                        <div class="table-responsive table-card">
+                                            <table class="table table-nowrap mb-0 table-bordered border-dark">
+                                                <thead class="font-type">
+                                                    <tr>
+                                                        <th>Updated by</th>
+                                                        <th>Status</th>
+                                                        <th>Date</th>
+                                                        <th>Remarks</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr class="fs-12 font-type" *ngFor="let item of statusdata">
+                                                        <td>{{item.EMP_NAME}}</td>
+                                                        <td class="status" *ngIf="item.REQUEST_STATUS==5"><span class="badge bg-info-subtle text-blue  width-budge fs-11 fw-semibold text-uppercase">{{item.STATUS_VAL}}</span></td>
+                                                        <td class="status" *ngIf="item.REQUEST_STATUS==1 || item.REQUEST_STATUS==3 ||item.REQUEST_STATUS==6||item.REQUEST_STATUS==8||item.REQUEST_STATUS==10||item.REQUEST_STATUS==13"><span class="badge bg-success-subtle text-success  width-budge fs-11 fw-semibold text-uppercase">{{item.STATUS_VAL}}</span></td>
+                                                        <td class="status" *ngIf="item.REQUEST_STATUS==2 || item.REQUEST_STATUS==4 || item.REQUEST_STATUS==7 || item.REQUEST_STATUS==11 || item.REQUEST_STATUS==12"><span class="badge bg-danger-subtle text-danger  width-budge fs-11 fw-semibold text-uppercase">{{item.STATUS_VAL}}</span></td>
+                                                        <td class="status" *ngIf="item.REQUEST_STATUS==9"><span class="badge bg-warning-subtle text-warning width-budge fs-11 fw-semibold text-uppercase">{{item.STATUS_VAL}}</span></td> 
+                                                        <td>{{item.TARGET_DATE | date:"dd-MM-yyyy" }}</td>
+                                                        <td>{{item.REMARKS}}</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+                <!-- End Status Modal-->
 
               <!-- Acceptance Model-->
               <div class="modal fade zoomIn" id="AcceptModal" tabindex="-1" aria-labelledby="AcceptModal" aria-hidden="true">
@@ -575,7 +616,7 @@
                           <div class="row mb-0">
                             <div class="col-md-12 col-lg-12">
                               <div class="table-responsive ma-5">
-                                <table class="table table-nowrap align-middle table-bordered border-blue">
+                                <table class="table table-nowrap align-middle table-bordered border-blue"  [ngClass]="{'disabled': isDisabled}">
                                   <thead class="text-white font-type fs-12">
                                     <tr class="bg-light-blue text-black border-blue">
                                       <th class="fs-13">#</th>
