--- a/src/app/employee/editemployeeprofile/editemployeeprofile.component.html
+++ b/src/app/employee/editemployeeprofile/editemployeeprofile.component.html
@@ -286,17 +286,37 @@
                                                                                     </div>
                                                                                 </div>
                                                                             </div>
+                                                                           
                                                                             <div class="col-lg-6" *ngIf="this.empcode!=this.empcdd">
                                                                                 <div class="mb-3">
-                                                                                    <label class="form-label font-type"><span class="latermandatory">*</span> Role</label>
-                                                                                    <select class="form-select h-30 font-type textbox-15" name="role" id="role"  formControlName="role" >
-                                                                                        <option value="" selected disabled>Select</option> 
-                                                                                        <option  *ngFor="let emproleList of listemprole" value="{{emproleList.KEY_ID}}">
-                                                                                            {{emproleList.DATA_VALUE}}
-                                                                                        </option>
-                                                                                    </select>
+                                                                                    <ng-container [ngSwitch]="true">
+                                                                                        <div *ngSwitchCase="this.roleselect==0">
+                                                                                        
+                                                                                                    <label class="form-label font-type"><span class="latermandatory">*</span> Role</label>
+                                                                                                    <select class="form-select h-30 font-type textbox-15" name="role" id="role"  formControlName="role" >
+                                                                                                        <option value="" selected disabled>Select</option> 
+                                                                                                        <option  *ngFor="let emproleList of listemprole" value="{{emproleList.KEY_ID}}">
+                                                                                                            {{emproleList.DATA_VALUE}}
+                                                                                                        </option>
+                                                                                                    </select>
+                                                                                            
+                                                                                        </div>
+                                                                                        <div *ngSwitchCase="this.roleselect==1">
+                                                                                        
+                                                                                                    <label class="form-label font-type"><span class="latermandatory">*</span> Role</label>
+                                                                                                    <select class="form-select h-30 font-type textbox-15" name="role" id="role"  formControlName="role" >
+                                                                                                        <option value="" selected disabled>Select</option> 
+                                                                                                        <option  *ngFor="let emproleList of listemprole" value="{{emproleList.KEY_ID}}" [hidden]="emproleList.KEY_ID==3 || emproleList.KEY_ID==2 || emproleList.KEY_ID==14 || emproleList.KEY_ID==15" >
+                                                                                                            {{emproleList.DATA_VALUE}}
+                                                                                                        </option>
+                                                                                                    </select>
+                                                                                                
+                                                                                        </div>
+                                                                                    </ng-container>
                                                                                 </div>
                                                                             </div>
+
+
                                                                             <div class="col-lg-6" *ngIf="this.empcode==this.empcdd">
                                                                                 <div class="mb-3">
                                                                                     <label class="form-label font-type"><span class="latermandatory">*</span> Role</label>
@@ -554,7 +574,7 @@
                                                                             <!-- <div class="err font-type" *ngIf="submitted && f['aireligibility'].errors">
                                                                                 <div *ngIf="f['aireligibility'].errors['required']"><i>Air ticket eligibility is required</i></div>
                                                                             </div> -->
-                                                                        </div>
+                                                                        </div> 
                                                                     </div>
                                                                     <div class="col-lg-6" >
                                                                         <div class="mb-3">
@@ -578,8 +598,7 @@
                                                                                 <option  *ngFor="let accomodationtypeList of listaccomodationtype" value="{{accomodationtypeList.DATA_VALUE}}">
                                                                                     {{accomodationtypeList.DATA_VALUE}}
                                                                                 </option>
-                                                                              </select>
-                                                                              
+                                                                            </select>
                                                                         </div>
                                                                     </div>
                                                                    
@@ -1399,7 +1418,7 @@
                                                                                         <th scope="col">No</th>
                                                                                         <th scope="col">Component</th>
                                                                                         <th scope="col">Value</th>
-                                                                                        <th scope="col">Action</th>  
+                                                                                        <th scope="col" *ngIf="this.listrestiction == '-1'">Action</th>  
                                                                                     </tr>
                                                                                 </thead>
                                                                                 <tbody>
@@ -1433,7 +1452,7 @@
                                                                                              </ng-container>
                                                                                             
                                                                                         </td>
-                                                                                         <td>
+                                                                                         <td *ngIf="this.listrestiction == '-1'">
                                                                                             <ul class="list-inline hstack gap-2 mb-0">
                                                                                                 <!-- <li class="list-inline-item" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-placement="top" title="Edit">
                                                                                                     <button type="button" class="btn btn-outline-warning btn-sm br_radius mr-2" data-bs-toggle="modal" id="buttonEdit" (click)="Editallowance(itemdtl.EMP_CODE,itemdtl.ALLOWANCE_ID,itemdtl.ALLOWANCE_NAME,itemdtl.AMOUNT)"  [hidden]="itemdtl.isallowanceEdit"><i class="fa fa-pencil-square-o ic_color" aria-hidden="true" style="font-size: 18px;"></i></button>
