--- a/src/app/master-data-management/usergroup-access-setting/usergroup-access-setting.component.html
+++ b/src/app/master-data-management/usergroup-access-setting/usergroup-access-setting.component.html
@@ -82,9 +82,9 @@
                                                     </ng-multiselect-dropdown>  
                                                            
                                             </div>
-                                            <div class="col-lg-4 col-sm-6 col-md-6  pt-1 mb-0">  
+                                            <div class="col-lg-4 col-sm-6 col-md-6  pt-2 mb-0 ">  
                                                     <h6 class="font-type fs-12 fw-semibold"><span>Menu</span></h6>
-                                                    <select class="form-select font-type fs-12 textbox-15" id="menuname">
+                                                    <select class="form-select font-type fs-12 textbox-15 " id="menuname">
                                                         <option value="-1">Select</option>
                                                         <option *ngFor="let datalist of menunames" value="{{datalist.DISPLAY_FIELD}}">
                                                             {{datalist.DISPLAY_FIELD}}
@@ -238,14 +238,16 @@
                                             <table class="table table-nowrap align-middle table-bordered border-orange table-hover">
                                                 <thead class="table-light text-white font-type">
                                                 <tr>
-                                                    <th>Sl No</th>
+                                                    <!-- <th>Sl No</th> -->
                                                     <th>User Group</th>
+                                                    <th>Menu List</th>
                                                 </tr>
                                             </thead>
                                             <tbody class="list form-check-all font-type fs-11">
                                             <tr class="font-type s-12" *ngFor="let grouppage of usergrouppage | search : searchInputgrp  | pagination: currentPagegrp: itemsPerPage;index as i">
-                                                <td>{{i+1}}</td>
+                                                <!-- <td>{{grouppage.EMP_ID}}</td> -->
                                                 <td>{{grouppage.DATA_VALUE}}</td>
+                                                <td><a href="#UsermenuaccessModal" data-bs-toggle="modal" class="text-orange d-inline-block edit-item-btn ms-1 fs-12" style="text-decoration: underline;" (click)="UserMenuAccessSavingList(grouppage.KEY_ID)">View List</a></td>
                                             </tr>
                                             
                                             </tbody>
@@ -387,7 +389,86 @@
                 </div>
             </div>
         </div>
-        <!--User group Modal End-->   
+        <!--User group Modal End--> 
+         <!--User Menu access list Modal-->
+         <div class="modal fade zoomIn" id="UsermenuaccessModal" tabindex="-1" aria-labelledby="UsermenuaccessModal" aria-hidden="true"  data-bs-backdrop='static'>
+            <div class="modal-dialog modal-dialog-centered modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header bg-orange padding-up-5">
+                        <h5 class="fs-13 font-type text-white ma-5">User Menu Access Setting List</h5>
+                        <button type="button" class="btn-close" id="deleteRecord-close" data-bs-dismiss="modal" aria-label="Close" id="btn-close"></button>
+                    </div>
+                    <form class="tablelist-form" autocomplete="off">
+                        <div class="modal-body pb-0">
+                            <input type="hidden" id="id-field" />
+                            <div class="row mb-0 margin-up-7">
+                                <div class="col-md-12 col-lg-12">
+                                <div class="table-responsive ma-5">
+                                    <table class="table table-nowrap align-middle table-bordered border-blue table-hover">
+                                        <thead class="text-white font-type fs-12">
+                                        <tr class="bg-light-blue text-black border-blue" >
+                                            <!-- <th class="fs-13">ID</th> -->
+                                            
+                                            <th>User</th>
+                                            <th>Menu</th>
+                                            <th hidden>User</th>
+                                            <th width="5%">Status</th>
+                                            <th width="5%">Action</th>
+                                        </tr>
+                                    </thead>
+
+                                    <tbody class="list form-check-all font-type fs-11">
+                                        <!-- Ensure this <tr> is used correctly if meant to be a special row -->
+                                        <tr>
+                                            <td [attr.rowspan]="lengthmenu+1" formcontrolname="userlistvalue" class="align-top">{{userlistvalue}}</td>
+                                        </tr>
+                                    
+                                        <tr *ngFor="let userGroup of usermenuAccesslist; let i = index">
+                                            <td hidden>{{ userGroup.USER_GRP }}</td>
+                                            <td>{{ userGroup.USER_GRP_NAME }}</td>
+                                            <td>
+                                                <div class="form-check form-switch form-switch-info">
+                                                    <input 
+                                                        class="form-check-input" 
+                                                        type="checkbox"  
+                                                        [checked]="userGroup.VIEW_FLAG === 1" 
+                                                        (change)="onCheckboxChangeMenu($event, i)"
+                                                    >
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <ul class="list-inline hstack gap-1 mb-0">
+                                                    <li 
+                                                        class="list-inline-item" 
+                                                        data-bs-toggle="tooltip" 
+                                                        data-bs-trigger="hover" 
+                                                        data-bs-placement="top" 
+                                                        title="Update Details"
+                                                    >
+                                                        <button 
+                                                            class="btn btn-sm btn-success focus-ring focus-ring-info" data-bs-target="#SuccessRecordModal" data-bs-toggle="modal"
+                                                            type="button"  
+                                                            (click)="SaveUserGroupMenuFlag(userGroup.USER_GRP_NAME , userGroup.VIEW_FLAG === 1,userGroup.MENU_ID,userGroup.USER_GRP,userGroup.PARENT_ID)"
+                                                            [disabled]="!userGroup.changed"
+                                                        >
+                                                            <span class="text-uppercase fw-medium font-type text-white" style="font-size: 8px;">SAVE</span>
+                                                        </button>
+                                                    </li>
+                                                </ul>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                    
+                                    </table> 
+                                </div><!-- end table responsive -->
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <!--User Menu access Modal End-->   
      <!--Modal For Success Message Start-->
      <div class="modal fade zoomIn" id="SuccessRecordModal" tabindex="-1" aria-labelledby="deleteRecordLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
